responsive overflow correct

--- a/projects/project_astrozone/css/responsive.css
+++ b/projects/project_astrozone/css/responsive.css
@@ -202,9 +202,14 @@
 @media (max-width: 468px) {
 	html {
 		overflow-x: hidden;
+		padding: 0;
 	}
+
 	.astro-gallery-section {
 		height: 50vh;
+	}
+	* {
+		outline: var(--ol);
 	}
 
 	.backsplash-container {
